--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-image": "^1.10.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
