--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "command": "^0.0.5",
     "expo": "~50.0.14",
     "expo-app-loading": "^2.1.1",
+    "expo-camera": "^14.1.3",
     "expo-font": "~11.10.3",
     "expo-image": "^1.10.6",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
